--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 				<a href="" class="border-l border-gray-400 pl-3">Terms & Conditions</a>
 			</div>
 			<div class="text-center text-white">
-				<p class="my-3 text-gray-400 text-sm">&copy; 2021 Class Technologies Inc. </p>
+				<p class="my-3 text-gray-400 text-sm">&copy; Levani Gamezardashvili 2024. </p>
 				<div class="py-3 tracking-wide">
 					<p>Code By <span class="font-semibold">mhaecal</span></p>
 					<p>UI/UX By <span class="font-semibold">Irvan Moses</span></p>
